[package]
name = "mqtt-projector-bridge"
description = "mqtt client to control a projector" 
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.20.0"
tokio = { version = "1.0", features = ["rt", "macros"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
